# POS

./: data.txt  main  main.c
Cvicenie3/: command.c  command.h  commandsQueue.h  main  main.c
Cvicenie4/src/: CMakeLists.txt  command.c  command.h  commandSettings.h  commandsQueue.c  commandsQueue.h  main.c
Cvicenie5/: CMakeLists.txt
Cvicenie5/src/: CMakeLists.txt  command.c  commandSettings.h  commandsExample.c  commandsGenerator.c  commandsGenerator.h  commandsQueue.c  fileAnalyser.c
Cvicenie6/Kufor/: CMakeLists.txt  Kody.txt  main  main.c
Cvicenie6/Triatlon/: CMakeLists.txt  main  main.c
Cvicenie6/Vlaky/: CMakeLists.txt  main  main.c  meskania.txt
PripravaNaTesty/Test1/Pizzeria/: main  main.c
PripravaNaTesty/Test1/Prvocisla/: main  main.c
PripravaNaTesty/Test2/FoodDash/: main  main.c
PripravaNaTesty/Test2/HamutexMalloku/: main  main.c
PripravaNaTesty/Test2/Mikulas/: main  main.c
PripravaNaTesty/Test2/Praziaren/: main  main.c
PripravaNaTesty/Test2/WeChat/: main  main.c
PripravaNaTesty/Test2/Zhon/: main  main.c
